# Reddit-Lite

./: .gitignore  .gitlab-ci.yml  .gitmessage  .pre-commit-config.yaml  Dockerfile  alembic.ini  deploy.sh  docker-compose.yml  pyproject.toml  ruff.toml
src/: admin.py  celery_app.py  main.py  utilts.py
src/api/: main.py
src/config/: database.py  settings.py
src/config/migrations/: env.py
src/config/migrations/versions/: 0642fd96dbcc_status_user_model.py  0d8a10a9d65f_user_model.py  0ef4427041e0_add_resend_cooldown.py  2d8aa00e710c_added_row_parrent_comment_id.py  38c626de86b3_vote_model_added_comment_key.py  6e410cd77da1_added_cascade_to_foreign_keys_in_post_.py  71ace75ae041_status_user_model.py  77ba7e5cad55_status_user_model.py  7a8641b3e1bc_verify_columns_added.py  8ea8d65436b8_subscribers_model_upgrade.py  9e041dd42dd2_posts_models_added.py  9e893e09ffbb_comments_count_row_added_to_post_model.py  a491350f3509_index_added.py  b9ff60135527_role_added.py  bd3731a33a6f_subscribers_model_addded.py  c0c378002400_index_add_to_created_at_and_updated_at.py  c2c1ac81050a_vote_model_fixed.py  dd989a833f33_fix.py  e59ca6c30bc6_vote_model_added.py  e8040f48fe2a_comments_and_post_model_fixed.py  efd8130dd3b5_post_model_fixed.py  f1dd7f272a20_subscribers_count.py  f4c021fe76bb_vote_model_added.py  f638c8cd357a_added_image_row_to_post_model.py
src/dao/: base.py
src/posts/: dao.py  models.py  router.py  router_comment.py  router_post.py  router_subreddit.py  schemas.py
src/tasks/: hi.py  send_email.py  test.py
src/users/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
