[project]
name = "reddit"
version = "0.1.0"
description = ""
authors = [
    {name = "Baiel",email = "nurdinovbaiel2005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standart] (>=0.115.11,<0.116.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "celery[redis] (>=5.5.0,<6.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "fastapi-mail (>=1.4.2,<2.0.0)",
    "bcrypt (==4.0.1)",
    "passlib (==1.7.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88         # Максимальная длина строки
target-version = "py310" # Версия Python
fix = true               # Автоматическое исправление по команде ruff --fix
show-fixes = true        # Показывать, что именно исправлено

select = ["E", "F", "B", "I"]   # Включить ошибки: pycodestyle (E), pyflakes (F), bugbear (B), isort (I)
ignore = ["E501"]              # Не проверять превышение длины строки
